# bevy-wasm

./: .gitignore  Cargo.toml  index.html  readme.md  sssssnake.js  style.css
src/: main.rs
