[package]
name = "snake-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

# Run for local wasm
# cargo run --target wasm32-unknown-unknown
# cargo run --target wasm32-unknown-unknown
# [target.wasm32-unknown-unknown]
# runner = "wasm-server-runner"